--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.5.0",
+    "chartkick": "^2.2.3",
     "express": "^4.15.2",
     "pg": "^6.1.5",
+    "react-chartkick": "^0.1.3",
     "sequelize": "^3.30.3",
     "ws": "^2.2.2"
   }
