--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartkick": "^2.2.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "mailgun-js": "^0.9.1",
     "pg": "^6.1.5",
     "react-chartkick": "^0.1.3",
     "sequelize": "^3.30.3",
